horizontal scroll fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 .app {
     min-height: 100vh;
     background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
